Cambio en el parrafo de index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p>
-        Hola profes, este es mi sitio web, sigueme por todo lado menos por la calle.
+        Hola profes, este es mi sitio web, sigueme por todo 
+        lado menos por la calle. Okay.
     </p>
 </body>
 </html>
